--- a/app/src/main/res/layout/notification_download.xml
+++ b/app/src/main/res/layout/notification_download.xml
@@ -12,16 +12,19 @@
         android:gravity="center">
         <ImageView
             android:id="@+id/ivLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@color/colorLightGray1"
-            android:layout_margin="10dp" />
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:scaleType="centerInside"
+            android:src="@mipmap/app_logo"
+            android:layout_marginLeft="2dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="6dp"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1"
-            android:layout_marginRight="14dp">
+            android:layout_marginRight="6dp">
             <TextView
                 android:id="@+id/task_name"
                 android:layout_width="wrap_content"
@@ -33,7 +36,7 @@
             <ProgressBar
                 android:id="@+id/pbDownload"
                 android:layout_width="fill_parent"
-                android:layout_height="6dp"
+                android:layout_height="5dp"
                 android:layout_marginTop="6dp"
                 android:layout_marginBottom="3dp"
                 android:progress="0"
@@ -49,5 +52,12 @@
                 android:textSize="12dp"
                 android:textStyle="bold" />
         </LinearLayout>
+        <ImageView
+            android:id="@+id/ivLogo2"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:scaleType="centerInside"
+            android:src="@mipmap/app_logo"
+            android:layout_marginRight="8dp"/>
     </LinearLayout>
 </LinearLayout>
