视频播放：支持显示时间 / 小说阅读：双击朗读文本

--- a/app/src/main/res/layout/sample_video.xml
+++ b/app/src/main/res/layout/sample_video.xml
@@ -191,13 +191,13 @@
             android:textSize="13sp" />
 
         <TextView
-            android:id="@+id/moreScale"
+            android:id="@+id/nowTime"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
             android:minEms="5"
             android:paddingLeft="10dp"
-            android:text="默认比例"
+            android:text="00:00"
             android:textColor="@android:color/white"
             android:textSize="13sp" />
     </LinearLayout>
