通知：通知删除优化

--- a/app/src/main/res/layout/notification_download.xml
+++ b/app/src/main/res/layout/notification_download.xml
@@ -32,6 +32,8 @@
                 android:textColor="@color/gray2"
                 android:text="自制浏览器下载任务"
                 android:textSize="14dp"
+                android:ellipsize="end"
+                android:singleLine="true"
                 android:textStyle="bold"/>
             <ProgressBar
                 android:id="@+id/pbDownload"
