--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
     android:id="@+id/editLayout"
     tools:context=".activity.MainActivity">
 
-
     <!--不自动获取焦点
     在edittext的父级容器中添加属性：
     android:focusable="true"
@@ -17,72 +16,16 @@
     -->
     <!--设置 android:inputType="text" 属性。不会自动换行-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/editBox"
+    <ImageView
+        android:id="@+id/settingBtn"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginRight="12dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/setting"
+        app:layout_constraintRight_toRightOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:text="是否开启影音监测"
-                android:textSize="15dp" />
-
-            <RadioGroup
-                android:id="@+id/downLoadGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:ignore="MissingConstraints">
-
-                <RadioButton
-                    android:id="@+id/downLoadTip"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:checked="true"
-                    android:theme="@style/MyRadioButton"/>
-
-            </RadioGroup>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:text="是否开启动图过滤"
-                android:textSize="15dp" />
-
-            <RadioGroup
-                android:id="@+id/gifGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:ignore="MissingConstraints">
-
-                <RadioButton
-                    android:id="@+id/gifTip"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:theme="@style/MyRadioButton"
-                    android:checked="true"/>
-
-            </RadioGroup>
-        </LinearLayout>
-    </LinearLayout>
+        tools:layout_editor_absoluteY="24dp" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/editBox"
