--- a/app/src/main/res/layout/setting_dialog.xml
+++ b/app/src/main/res/layout/setting_dialog.xml
@@ -1,74 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    android:background="@drawable/feet_dialog_bg"
-    android:gravity="center|top"
+    android:layout_width="200dp"
+    android:layout_height="130dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/translucent"
+    android:gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:orientation="vertical">
+    <androidx.cardview.widget.CardView
+        android:layout_width="170dp"
+        android:layout_height="100dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="8dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:text="是否开启影音监测"
-                android:textSize="15dp" />
-
-            <RadioGroup
-                android:id="@+id/downLoadGroup"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <RadioButton
-                    android:id="@+id/downLoadTip"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:checked="true"
-                    android:theme="@style/MyRadioButton"/>
-
-            </RadioGroup>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="130dp"
                 android:layout_height="wrap_content"
-                android:text="是否开启动图过滤"
-                android:textSize="15dp" />
+                android:gravity="center"
+                android:orientation="horizontal">
 
-            <RadioGroup
-                android:id="@+id/gifGroup"
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="影音监测"
+                    android:textColor="@color/blackGray"
+                    android:textSize="16dp" />
+
+                <RadioGroup
+                    android:id="@+id/downLoadGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <RadioButton
+                        android:id="@+id/downLoadTip"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:checked="true"
+                        android:theme="@style/MyRadioButton"/>
+
+                </RadioGroup>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/gifTip"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:theme="@style/MyRadioButton"
-                    android:checked="true"/>
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/blackGray"
+                    android:text="动图过滤"
+                    android:textSize="16dp" />
 
-            </RadioGroup>
+                <RadioGroup
+                    android:id="@+id/gifGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <RadioButton
+                        android:id="@+id/gifTip"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:theme="@style/MyRadioButton"
+                        android:checked="true"/>
+
+                </RadioGroup>
+            </LinearLayout>
+
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+
 
 </LinearLayout>
