--- a/app/src/main/res/layout/notification_download.xml
+++ b/app/src/main/res/layout/notification_download.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_width="fill_parent"
-    android:layout_height="50dp"
+    android:layout_height="60dp"
+    android:padding="5dp"
     android:background="@color/colorLightGray1">
     <LinearLayout
         android:layout_width="fill_parent"
@@ -18,7 +19,7 @@
             android:src="@mipmap/app_logo"
             android:layout_marginLeft="2dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginRight="6dp"/>
+            android:layout_marginRight="8dp"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,6 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/gray2"
+                android:layout_marginTop="2dp"
                 android:text="已下载0%"
                 android:textSize="12dp"
                 android:textStyle="bold" />
@@ -60,6 +62,7 @@
             android:layout_height="38dp"
             android:scaleType="centerInside"
             android:src="@mipmap/app_logo"
+            android:layout_marginLeft="6dp"
             android:layout_marginRight="8dp"/>
     </LinearLayout>
 </LinearLayout>
