--- a/app/src/main/res/layout/activity_txt.xml
+++ b/app/src/main/res/layout/activity_txt.xml
@@ -58,6 +58,7 @@
             android:layout_height="match_parent"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:paddingBottom="10dp"
             android:textSize="20dp"
             android:lineSpacingMultiplier="1.2"
             android:letterSpacing="0.08"
