浏览器优化： 恢复浏览位置（主要针对动态加载的页面）适应前进和后退 2  /  省电策略提示调整

--- a/app/src/main/res/layout/top_dialog.xml
+++ b/app/src/main/res/layout/top_dialog.xml
@@ -79,7 +79,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:textColor="@color/gray3"
-                    android:text="* 若省电策略之无限制无效，可尝试清除缓存"/>
+                    android:text="* 省电策略之无限制，设置后需稍等策略生效"/>
             </LinearLayout>
 
         </LinearLayout>
