--- a/app/src/main/res/layout/activity_brower2.xml
+++ b/app/src/main/res/layout/activity_brower2.xml
@@ -15,6 +15,7 @@
 
     <!-- 导航栏 -->
     <LinearLayout
+        android:id="@+id/btn_menu2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
