浏览器风格2 调试333

--- a/app/src/main/res/layout/fragment_webview.xml
+++ b/app/src/main/res/layout/fragment_webview.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <FrameLayout
@@ -11,9 +12,56 @@
         android:visibility="gone" >
     </FrameLayout>
 
-    <WebView
-        android:id="@+id/webView"
+    <LinearLayout
+        android:id="@+id/viewViewLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/url_Layout2"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/url_box2"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:gravity="center|start"
+                android:imeOptions="actionDone"
+                android:paddingLeft="2dp"
+                android:paddingRight="2dp"
+                android:inputType="text"
+                android:maxLines="1"
+                android:textCursorDrawable="@drawable/edit_text_cursor"
+                android:background="@color/white"
+                android:layout_marginEnd="10dp"
+                android:textColor="@color/gray3" />
+            <ImageButton
+                android:id="@+id/url_like2"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:scaleType="fitCenter"
+                android:background="@drawable/btn_like2"
+                android:layout_marginEnd="10dp"
+                android:gravity="center|end" />
+            <ImageButton
+                android:id="@+id/url_flush2"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:scaleType="fitCenter"
+                android:background="@drawable/btn_flush"
+                android:layout_marginEnd="10dp"
+                android:gravity="center|end" />
+
+        </LinearLayout>
+        <WebView
+            android:id="@+id/webView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
 
 </RelativeLayout>
