--- a/app/src/main/res/layout/fragment_webview.xml
+++ b/app/src/main/res/layout/fragment_webview.xml
@@ -73,9 +73,10 @@
         <ProgressBar
             android:id="@+id/viewViewProgressbar"
             android:visibility="gone"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
-            android:layout_height="2dp" />
+            android:layout_height="2dp"
+            android:progressDrawable="@drawable/progress_bar2"
+            style="?android:attr/progressBarStyleHorizontal"  />
         <LinearLayout
             android:id="@+id/progressBg"
             android:background="@drawable/txt_bg"
