--- a/app/src/main/res/drawable/progress_bar2.xml
+++ b/app/src/main/res/drawable/progress_bar2.xml
@@ -5,10 +5,10 @@
         <shape>
             <corners android:radius="5dip" />
             <gradient
-                android:startColor="#D8D8D8"
-                android:centerColor="#D8D8D8"
+                android:startColor="#FFFFFF"
+                android:centerColor="#FFFFFF"
                 android:centerY="0.75"
-                android:endColor="#D8D8D8"
+                android:endColor="#FFFFFF"
                 android:angle="270"
                 />
         </shape>
