Revert "新版浏览器优化：跳转页面 原页面视频播放暂停与恢复"
This reverts commit 093d1cedc3404b925f898e949e37262e99994ff7.

--- a/app/src/main/res/drawable/progress_bar2.xml
+++ b/app/src/main/res/drawable/progress_bar2.xml
@@ -5,10 +5,10 @@
         <shape>
             <corners android:radius="5dip" />
             <gradient
-                android:startColor="#FFFFFF"
-                android:centerColor="#FFFFFF"
+                android:startColor="#D8D8D8"
+                android:centerColor="#D8D8D8"
                 android:centerY="0.75"
-                android:endColor="#FFFFFF"
+                android:endColor="#D8D8D8"
                 android:angle="270"
                 />
         </shape>
