新版浏览器、下载等大优化

--- a/app/src/main/res/layout/download_recyclerview_item.xml
+++ b/app/src/main/res/layout/download_recyclerview_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -9,18 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center|start"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:orientation="horizontal">
         <LinearLayout
-            android:id="@+id/item_l"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:paddingRight="5dp"
+            android:paddingRight="30dp"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/item_txt"
+                android:id="@+id/item_downloadFilename"
                 android:gravity="center|start"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
@@ -31,32 +31,21 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
             android:orientation="horizontal"
             android:gravity="center">
             <Button
-                android:id="@+id/item_del"
-                android:visibility="gone"
+                android:id="@+id/item_download"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@color/trans_color"
+                android:layout_width="60dp"
+                android:layout_height="26dp"
+                android:background="@drawable/btn_bg3"
                 android:textColor="@color/gray2"
-                android:textSize="20dp"
-                android:text="×"/>
-            <Button
-                android:id="@+id/item_true"
-                android:visibility="gone"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@color/trans_color"
-                android:textColor="@color/gray2"
-                android:textSize="20dp"
-                android:text="√"/>
+                android:textSize="14dp"
+                android:text="下载"
+                android:stateListAnimator="@null"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -64,8 +53,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:background="@color/colorLightGray1"/>
 
 </LinearLayout>
