--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
 
     <color name="trans_color">#00ffffff</color>
     <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary2">#2196F3</color>
     <color name="colorPrimaryDark">#005FFE</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#ffffff</color>
