--- a/app/src/main/res/layout/download_recyclerview_item.xml
+++ b/app/src/main/res/layout/download_recyclerview_item.xml
@@ -11,18 +11,17 @@
         android:layout_height="40dp"
         android:gravity="center|start"
         android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginRight="13dp"
         android:orientation="horizontal">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:paddingRight="30dp"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/item_downloadFilename"
                 android:gravity="center|start"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:textIsSelectable="true"
                 android:textSize="14dp"
@@ -44,8 +43,7 @@
                 android:background="@drawable/btn_bg3"
                 android:textColor="@color/gray2"
                 android:textSize="14dp"
-                android:text="下载"
-                android:stateListAnimator="@null"/>
+                android:text="下载" />
         </LinearLayout>
 
     </LinearLayout>
