--- a/app/src/main/res/layout/download_recyclerview_item.xml
+++ b/app/src/main/res/layout/download_recyclerview_item.xml
@@ -18,12 +18,23 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <TextView
+            <EditText
                 android:id="@+id/item_downloadFilename"
                 android:gravity="center|start"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:textIsSelectable="true"
+                android:textSize="14dp"
+                android:inputType="text"
+                android:textColor="@color/gray2"
+                android:textColorHint="@color/gray2"
+                android:textCursorDrawable="@drawable/edit_text_cursor"
+                android:maxLines="1"/>
+            <TextView
+                android:id="@+id/item_downloadFileType"
+                android:gravity="center|start"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:textIsSelectable="false"
                 android:textSize="14dp"
                 android:inputType="text"
                 android:maxLines="1"/> <!-- android:textIsSelectable="true" 允许复制-->
