--- a/app/src/main/res/layout/toast_view.xml
+++ b/app/src/main/res/layout/toast_view.xml
@@ -7,12 +7,14 @@
 
     <TextView android:id="@+id/toast_msg"
               android:layout_width="wrap_content"
-              android:layout_height="40dp"
-              android:paddingLeft="10dp"
-              android:paddingRight="10dp"
+              android:layout_height="50dp"
+              android:paddingLeft="14dp"
+              android:paddingRight="14dp"
               android:gravity="center"
               android:textColor="@color/colorWhite"
               android:textSize="16dp"
+              android:ellipsize="end"
+              android:maxLines="2"
               android:background="@drawable/toast_view_bg"/>
 
 
