--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,7 +105,7 @@
             android:background="@drawable/btn_bg1"
             android:textColor="@color/blackGray"
             android:textSize="16dp"
-            android:text="小说"/>
+            android:text="文本"/>
 
         <!--已不用-->
         <Button
