--- a/app/src/main/res/layout/activity_txt_list.xml
+++ b/app/src/main/res/layout/activity_txt_list.xml
@@ -25,7 +25,7 @@
             android:text="〈"/>
 
         <TextView
-            android:text="小说"
+            android:text="文本"
             android:textSize="17dp"
             android:textStyle="bold"
             android:gravity="center"
