下载功能拆解优化12

--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -42,7 +42,7 @@
             android:textColor="@color/gray2"
             android:textSize="15dp"
             android:gravity="center"
-            android:text="编辑"/>
+            android:text="···"/>
 
     </LinearLayout>
 
