--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,7 +121,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="70dp"
         android:layout_marginBottom="188dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center"
@@ -132,7 +132,14 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:scaleType="centerInside"
-            android:src="@drawable/btn_lock"/>
+            android:src="@drawable/btn_lock"
+            android:layout_marginBottom="10dp"/>
+        <ImageView
+            android:id="@+id/mapBtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/btn_map"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
