--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,6 +128,7 @@
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
         <ImageView
+            android:visibility="gone"
             android:id="@+id/lockBtn"
             android:layout_width="30dp"
             android:layout_height="30dp"
