--- a/app/src/main/res/layout/location_recyclerview_item.xml
+++ b/app/src/main/res/layout/location_recyclerview_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="60dp"
     android:gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:gravity="center|start"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="13dp"
@@ -17,15 +17,14 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <TextView
+            <cn.cheng.simpleBrower.custom.NoCutPasteTextView
                 android:id="@+id/item_address"
                 android:gravity="center|start"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
+                android:paddingRight="3dp"
                 android:textIsSelectable="true"
-                android:textSize="14dp"
-                android:inputType="text"
-                android:maxLines="1"/> <!-- android:textIsSelectable="true" 允许复制-->
+                android:textSize="15dp" /> <!-- android:textIsSelectable="true" 允许复制-->
         </LinearLayout>
 
         <LinearLayout
@@ -38,11 +37,12 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_width="60dp"
-                android:layout_height="26dp"
+                android:layout_height="30dp"
                 android:background="@drawable/btn_bg3"
                 android:textColor="@color/gray2"
-                android:textSize="14dp"
-                android:text="定位" />
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:text="定 位" />
         </LinearLayout>
 
     </LinearLayout>
